--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for Check-NetworkSpans
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+0.0.1	2025-01-25/02:30
+		- initial release
+
 
