--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Check-NetworkSpans
 
+0.0.2	2025-01-31/16:30
+		- properly print ignored items
+		- save the alert level value for alert type
+		- fix POD errors
+		- fix alert level value check
+
 0.0.1	2025-01-25/02:30
 		- initial release
 
